infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1 # number of copies of the pod
  selector: # how to find the pods for the deployment
    matchLabels:
      app: posts
  template: # how we build the pods
    metadata:
      labels:
        app: posts # name of the pod
    spec:
      containers:
        - name: posts
          image: gcapu/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
