infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort # if this field is not present, it defaults to ClusterIP
  selector:
    app: posts
  ports:
    - name: posts # This is just for logging purposes, it can have any name
      protocol: TCP
      port: 4000 # from port 4000
      targetPort: 4000 # expose port 4000
